cfb-bootstrap5 - offcanvas em bootstrap - janela lateral #p2

--- a/cfb-bootstrap5/aula32/index.html
+++ b/cfb-bootstrap5/aula32/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="offcanvas offcanvas-start" id="menu1">
+    <div class="offcanvas" id="menu">
         <div class="offcanvas-header">
             <h1 class="offcanvas-title">menu de cursos</h1>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
@@ -18,31 +18,15 @@
             <a href="#" target="_blank">curso de bootstrap</a><br/>
             <a href="#" target="_blank">curso de arduino</a><br/>
             <a href="#" target="_blank">curso de javascript</a><br/>
-            <a href="#" target="_blank">curso de #c</a><br/>
-        </div>
-    </div>
-
-    <div class="offcanvas offcanvas-end" id="menu2">
-        <div class="offcanvas-header">
-            <h1 class="offcanvas-title">menu de cursos</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-        </div>
-        <div class="offcanvas-body">
-            <a href="#" target="_blank">curso de bootstrap</a><br/>
-            <a href="#" target="_blank">curso de arduino</a><br/>
-            <a href="#" target="_blank">curso de javascript</a><br/>
-            <a href="#" target="_blank">curso de #c</a><br/>
+            <a href="#" target="_blank">curso de java</a><br/>
+            <a href="#" target="_blank">curso de c#</a><br/>
         </div>
     </div>
 
     <div class="container-fluid mt-3">
         <h3>offcanvas janela lateral</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, veniam nihil atque non natus beatae sapiente qui! Magni veritatis officiis tenetur eum blanditiis sint vitae sit. Alias doloribus eligendi dignissimos.</p>
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#menu1">
-            abrir janela lateral 1
-        </button>
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#menu2">
-            abrir janela lateral 2
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#menu">
+            abrir janela lateral
         </button>
     </div>
     
