--- a/cfb-bootstrap5/aula33/index.html
+++ b/cfb-bootstrap5/aula33/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
 
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
+    <div class="quadrado border border-3 border-top-0 border-bottom-0"></div>
+    <div class="quadrado border border-5 border-primary"></div>
     <div class="quadrado"></div>
     <div class="quadrado"></div>
     <div class="quadrado"></div>
