--- a/cfb-bootstrap5/aula33/index.html
+++ b/cfb-bootstrap5/aula33/index.html
@@ -18,20 +18,20 @@
 </head>
 <body>
 
-    <div class="quadrado border border-3 border-top-0 border-bottom-0"></div>
+    <div class="quadrado border border-3 border-top-0"></div>
     <div class="quadrado border border-5 border-primary"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
+    <div class="quadrado border-top border-bottom border-5 border-danger "></div>
+    <div class="quadrado border border-start-0 border-end-0 border-5 border-danger"></div>
+    <div class="quadrado border border-dark rounded"></div>
+    <div class="quadrado border border-dark rounded-1"></div>
+    <div class="quadrado border border-dark rounded-2"></div>
+    <div class="quadrado border border-dark rounded-3"></div>
+    <div class="quadrado border border-dark rounded-start"></div>
+    <div class="quadrado border border-dark rounded-end"></div>
+    <div class="quadrado border border-dark rounded-top"></div>
+    <div class="quadrado border border-dark rounded-bottom"></div>
+    <div class="quadrado border border-dark rounded-circle"></div>
+    <div class="quadrado border border-dark rounded-pill"></div>
     <div class="quadrado"></div>
     <div class="quadrado"></div>
     <div class="quadrado"></div>
