--- a/cfb-bootstrap5/aula34/index.html
+++ b/cfb-bootstrap5/aula34/index.html
@@ -21,9 +21,9 @@
         <div class="caixa bg-primary">esquerda 1</div>
         <div class="caixa bg-primary">direita 1</div>
         <div class="caixa bg-success">esquerda 2</div>
-        <div class="caixa bg-success">direira 2</div>
+        <div class="caixa bg-success">direita 2</div>
         <div class="caixa bg-secondary">esquerda 3</div>
-        <div class="caixa bg-secondary">direira 3</div>
+        <div class="caixa bg-secondary">direita 3</div>
     </div>
     
 </body>
