--- a/cfb-bootstrap5/aula34/index.html
+++ b/cfb-bootstrap5/aula34/index.html
@@ -7,7 +7,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <title>CFB Cursos - Curso de Bootstrap</title>
     <style>
-        .quadrado {
+        .caixa {
             border: 1px solid #000;
             padding: 6px;
             margin: 6px;
