--- a/cfb-bootstrap5/aula34/index.html
+++ b/cfb-bootstrap5/aula34/index.html
@@ -18,12 +18,12 @@
 <body>
 
     <div>
-        <div class="caixa bg-primary">esquerda 1</div>
-        <div class="caixa bg-primary">direita 1</div>
-        <div class="caixa bg-success">esquerda 2</div>
-        <div class="caixa bg-success">direita 2</div>
-        <div class="caixa bg-secondary">esquerda 3</div>
-        <div class="caixa bg-secondary">direita 3</div>
+        <div class="caixa bg-primary">Esquerda 1</div>
+        <div class="caixa bg-primary">Direita 1</div>
+        <div class="caixa bg-success">Esquerda 2</div>
+        <div class="caixa bg-success">Direita 2</div>
+        <div class="caixa bg-secondary">Esquerda 3</div>
+        <div class="caixa bg-secondary">Direita 3</div>
     </div>
     
 </body>
