--- a/cfb-bootstrap5/aula34/index.html
+++ b/cfb-bootstrap5/aula34/index.html
@@ -13,11 +13,27 @@
             margin: 6px;
             color: #fff;
         }
+
+        .clear_fix {
+            clear: both;
+        }
     </style>
 </head>
 <body>
 
-    <div>
+    <div >
+        <div class="caixa bg-primary" style="float: left;">Esquerda 1</div>
+        <div class="caixa bg-primary" style="float: right;">Direita 1</div>
+        <div class="caixa bg-success clear_fix" style="float: left;">Esquerda 2</div>
+        <div class="caixa bg-success" style="float: right;">Direita 2</div>
+        <div class="caixa bg-secondary clear_fix" style="float: left;">Esquerda 3</div>
+        <div class="caixa bg-secondary" style="float: right;">Direita 3</div>
+    </div>
+
+    <br/>
+    <br/>
+    <hr/>
+    <div >
         <div class="caixa bg-primary">Esquerda 1</div>
         <div class="caixa bg-primary">Direita 1</div>
         <div class="caixa bg-success">Esquerda 2</div>
