cfb-bootstrap5 - classes float-left, float-right e clearfix em bootstrap #p2

--- a/cfb-bootstrap5/aula34/index.html
+++ b/cfb-bootstrap5/aula34/index.html
@@ -21,7 +21,21 @@
 </head>
 <body>
 
-    <div >
+    <div class="clearfix">
+        <div class="caixa bg-primary float-start">Esquerda 1</div>
+        <div class="caixa bg-primary float-end">Direita 1</div>
+    </div>
+    <div class="clearfix">
+        <div class="caixa bg-success float-start">Esquerda 2</div>
+        <div class="caixa bg-success float-end">Direita 2</div>
+    </div>
+    <div class="clearfix">
+        <div class="caixa bg-secondary float-start">Esquerda 3</div>
+        <div class="caixa bg-secondary float-end">Direita 3</div>
+    </div>
+
+    <hr/>
+    <div>
         <div class="caixa bg-primary" style="float: left;">Esquerda 1</div>
         <div class="caixa bg-primary" style="float: right;">Direita 1</div>
         <div class="caixa bg-success clear_fix" style="float: left;">Esquerda 2</div>
