--- a/cfb-bootstrap5/aula35/index.html
+++ b/cfb-bootstrap5/aula35/index.html
@@ -10,23 +10,23 @@
 <body>
 
     <div class="container-fluid">
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
+        <div class="w-25 bg-primary mb-2">25%</div>
+        <div class="w-50 bg-primary mb-2">50%</div>
+        <div class="w-75 bg-primary mb-2">75%</div>
+        <div class="w-100 bg-primary mb-2">100%</div>
+        <div class="w-auto bg-primary mb-2">auto</div>
     </div>
 
-    <div class="container-fluid">
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
+    <div class="container-fluid" style="height: 300px;">
+        <div class="h-25 bg-danger me-2 d-inline-block">25%</div>
+        <div class="h-50 bg-danger me-2 d-inline-block">50%</div>
+        <div class="h-75 bg-danger me-2 d-inline-block">75%</div>
+        <div class="h-100 bg-danger me-2 d-inline-block">100%</div>
+        <div class="h-auto bg-danger me-2 d-inline-block">auto</div>
     </div>
 
-    <div class="container-fluid">
-        <div class="">centro</div>
+    <div class="container-fluid bg-success">
+        <div class="bg-danger mx-auto" style="width: 200px;">centro</div>
     </div>
     
 </body>
