--- a/cfb-bootstrap5/aula35/index.html
+++ b/cfb-bootstrap5/aula35/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+    <!-- largura -->
     <div class="container-fluid">
         <div class="w-25 bg-primary mb-2">25%</div>
         <div class="w-50 bg-primary mb-2">50%</div>
@@ -17,6 +18,7 @@
         <div class="w-auto bg-primary mb-2">auto</div>
     </div>
 
+    <!-- altura -->
     <div class="container-fluid" style="height: 300px;">
         <div class="h-25 bg-danger me-2 d-inline-block">25%</div>
         <div class="h-50 bg-danger me-2 d-inline-block">50%</div>
@@ -25,6 +27,7 @@
         <div class="h-auto bg-danger me-2 d-inline-block">auto</div>
     </div>
 
+    <!-- centralizacao -->
     <div class="container-fluid bg-success">
         <div class="bg-danger mx-auto" style="width: 200px;">centro</div>
     </div>
