cfb-bootstrap5 - espacamento interno [padding] e externo [margin] em bootstrap #p1

--- a/cfb-bootstrap5/aula36/index.html
+++ b/cfb-bootstrap5/aula36/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <!-- margin espacamento externo -->
+    <!-- paddin espacamento interno -->
     <div class="container-fluid border border-1 border-dark" style="background-color: #eee;">
         <div class="">cfb cursos</div>
         <div class="">curso de bootstrap</div>
