cfb-bootstrap5 - espacamento interno [padding] e externo [margin] em bootstrap #p2

--- a/cfb-bootstrap5/aula36/index.html
+++ b/cfb-bootstrap5/aula36/index.html
@@ -11,11 +11,16 @@
 
     <!-- margin espacamento externo -->
     <!-- paddin espacamento interno -->
-    <div class="container-fluid border border-1 border-dark" style="background-color: #eee;">
-        <div class="">cfb cursos</div>
-        <div class="">curso de bootstrap</div>
-        <div class="">youtube.com/cfbcursos</div>
+
+    <div>topo</div>
+
+    <div class="container-fluid border border-1 border-dark mt-5 p-3" style="background-color: #eee;">
+        <div class="border border-1 border-dark m-3">cfb cursos</div>
+        <div class="border border-1 border-dark">curso de bootstrap</div>
+        <div class="border border-1 border-dark">youtube.com/cfbcursos</div>
     </div>
+
+    <div>base</div>
     
 </body>
 </html>
