cfb-bootstrap5 - classe [shadow] para aplicar sombra em bootstrap #p2

--- a/cfb-bootstrap5/aula37/index.html
+++ b/cfb-bootstrap5/aula37/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 
-    <div class="border border-1 border-dark m-5 p-4 bg-white">cfb cursos</div>
-    <div class="border border-1 border-dark m-5 p-4 bg-white">cfb cursos</div>
-    <div class="border border-1 border-dark m-5 p-4 bg-white">cfb cursos</div>
-    <div class="border border-1 border-dark m-5 p-4 bg-white">cfb cursos</div>
+    <div class="border border-1 border-dark m-5 p-4 bg-white shadow">cfb cursos</div>
+    <div class="border border-1 border-dark m-5 p-4 bg-white shadow-sm">cfb cursos</div>
+    <div class="border border-1 border-dark m-5 p-4 bg-white shadow-lg">cfb cursos</div>
+    <div class="border border-1 border-dark m-5 p-4 bg-white shadow-none">cfb cursos</div>
     
 </body>
 </html>
