cfb-bootstrap5 - classe [ratio] configurando o aspect ratio de videos  em bootstrap #p2

--- a/cfb-bootstrap5/aula38/index.html
+++ b/cfb-bootstrap5/aula38/index.html
@@ -10,7 +10,16 @@
 <body>
 
     <div class="container">
-        <div>
+        <div class="border border-1 border-dark ratio ratio-1x1">
+            <iframe src="https://www.youtube.com/embed/oRVBoGpgtu0"></iframe>
+        </div>
+        <div class="border border-1 border-dark ratio ratio-4x3">
+            <iframe src="https://www.youtube.com/embed/oRVBoGpgtu0"></iframe>
+        </div>
+        <div class="border border-1 border-dark ratio ratio-16x9">
+            <iframe src="https://www.youtube.com/embed/oRVBoGpgtu0"></iframe>
+        </div>
+        <div class="border border-1 border-dark ratio ratio-21x">
             <iframe src="https://www.youtube.com/embed/oRVBoGpgtu0"></iframe>
         </div>
     </div>
