cfb-bootstrap5 - display flex [d-flex] em bootstrap #p1

--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <!-- display flex [d-flex] em bootstrap -->
     <div class="p-2" style="background-color: #ddd;">
         <div class="bg-primary">cfb cursos</div>
         <div class="bg-danger">cfb cursos</div>
