cfb-bootstrap5 - display flex [d-flex] em bootstrap #p2

--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -9,7 +9,14 @@
 <body>
 
     <!-- display flex [d-flex] em bootstrap -->
-    <div class="p-2" style="background-color: #ddd;">
+    <div class="p-2 d-flex flex-row" style="background-color: #ddd;">
+        <div class="bg-primary">cfb cursos</div>
+        <div class="bg-danger">cfb cursos</div>
+        <div class="bg-warning">cfb cursos</div>
+        <div class="bg-info">cfb cursos</div>
+    </div>
+
+    <div class="p-2 d-inline-flex mt-5" style="background-color: #ddd;">
         <div class="bg-primary">cfb cursos</div>
         <div class="bg-danger">cfb cursos</div>
         <div class="bg-warning">cfb cursos</div>
