--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <!-- display flex [d-flex] em bootstrap -->
-    <div class="p-2 d-flex flex-row" style="background-color: #ddd;">
-        <div class="bg-primary">cfb cursos</div>
-        <div class="bg-danger">cfb cursos</div>
-        <div class="bg-warning">cfb cursos</div>
-        <div class="bg-info">cfb cursos</div>
+    <div class="p-2 d-flex flex-column-reverse" style="background-color: #ddd;">
+        <div class="bg-primary w-25">cfb cursos</div>
+        <div class="bg-danger w-25">cfb cursos</div>
+        <div class="bg-warning w-25">cfb cursos</div>
+        <div class="bg-info w-25">cfb cursos</div>
     </div>
 
     <div class="p-2 d-inline-flex mt-5" style="background-color: #ddd;">
