cfb-bootstrap5 - alinhamento horizontal - display flex em bootstrap #p1

--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -15,5 +15,33 @@
         <div class="bg-info">cfb cursos</div>
     </div>
 
+    <div class="p-1 d-flex flex-row m-2" style="background-color: #ccc;">
+        <div class="bg-primary">cfb cursos</div>
+        <div class="bg-danger">cfb cursos</div>
+        <div class="bg-warning">cfb cursos</div>
+        <div class="bg-info">cfb cursos</div>
+    </div>
+
+    <div class="p-1 d-flex flex-row m-2" style="background-color: #ccc;">
+        <div class="bg-primary">cfb cursos</div>
+        <div class="bg-danger">cfb cursos</div>
+        <div class="bg-warning">cfb cursos</div>
+        <div class="bg-info">cfb cursos</div>
+    </div>
+
+    <div class="p-1 d-flex flex-row m-2" style="background-color: #ccc;">
+        <div class="bg-primary">cfb cursos</div>
+        <div class="bg-danger">cfb cursos</div>
+        <div class="bg-warning">cfb cursos</div>
+        <div class="bg-info">cfb cursos</div>
+    </div>
+
+    <div class="p-1 d-flex flex-row m-2" style="background-color: #ccc;">
+        <div class="bg-primary">cfb cursos</div>
+        <div class="bg-danger">cfb cursos</div>
+        <div class="bg-warning">cfb cursos</div>
+        <div class="bg-info">cfb cursos</div>
+    </div>
+
 </body>
 </html>
