cfb-bootstrap5 - alinhamento horizontal - display flex em bootstrap #p2

--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -8,35 +8,35 @@
 </head>
 <body>
 
-    <div class="p-1 d-flex flex-row m-2" style="background-color: #cccc;">
+    <div class="p-1 d-flex flex-row m-2 justify-content-start" style="background-color: #cccc;">
+        <div class="bg-primary flex-fill">cfb cursos</div>
+        <div class="bg-danger flex-fill">cfb cursos</div>
+        <div class="bg-warning flex-fill">cfb cursos</div>
+        <div class="bg-info flex-fill">cfb cursos</div>
+    </div>
+
+    <div class="p-1 d-flex flex-row m-2 justify-content-end" style="background-color: #cccc;">
         <div class="bg-primary">cfb cursos</div>
         <div class="bg-danger">cfb cursos</div>
         <div class="bg-warning">cfb cursos</div>
         <div class="bg-info">cfb cursos</div>
     </div>
 
-    <div class="p-1 d-flex flex-row m-2" style="background-color: #cccc;">
+    <div class="p-1 d-flex flex-row m-2 justify-content-center" style="background-color: #cccc;">
         <div class="bg-primary">cfb cursos</div>
         <div class="bg-danger">cfb cursos</div>
         <div class="bg-warning">cfb cursos</div>
         <div class="bg-info">cfb cursos</div>
     </div>
 
-    <div class="p-1 d-flex flex-row m-2" style="background-color: #cccc;">
+    <div class="p-1 d-flex flex-row m-2 justify-content-between" style="background-color: #cccc;">
         <div class="bg-primary">cfb cursos</div>
         <div class="bg-danger">cfb cursos</div>
         <div class="bg-warning">cfb cursos</div>
         <div class="bg-info">cfb cursos</div>
     </div>
 
-    <div class="p-1 d-flex flex-row m-2" style="background-color: #cccc;">
-        <div class="bg-primary">cfb cursos</div>
-        <div class="bg-danger">cfb cursos</div>
-        <div class="bg-warning">cfb cursos</div>
-        <div class="bg-info">cfb cursos</div>
-    </div>
-
-    <div class="p-1 d-flex flex-row m-2" style="background-color: #cccc;">
+    <div class="p-1 d-flex flex-row m-2 justify-content-around" style="background-color: #cccc;">
         <div class="bg-primary">cfb cursos</div>
         <div class="bg-danger">cfb cursos</div>
         <div class="bg-warning">cfb cursos</div>
