--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+    <!--
+
+        justify-content-start   = alinha os itens a esquerda (inicio)
+        justify-content-end     = alinha os itens a direita (fim)
+        justify-content-center  = centraliza os itens 
+        justify-content-between = distribui os itens com espacos iguais entre eles
+        justify-content-around  = distribui os itens com espaços ao redor
+        justify-content-evenly  = distribui os itens com espaco uniforme
+    -->
+
     <div class="p-1 d-flex flex-row m-2 justify-content-start" style="background-color: #cccc;">
         <div class="bg-primary flex-fill">cfb cursos</div>
         <div class="bg-danger flex-fill">cfb cursos</div>
