cfb-bootstrap5 - alinhamento horizontal - display flex em bootstrap #p2

--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -9,11 +9,12 @@
 <body>
 
     <!--
+        as classes de alinhamento horizontal controlam como os itens são distribuidos ao longo do eixo principal 
 
         justify-content-start   = alinha os itens a esquerda (inicio)
         justify-content-end     = alinha os itens a direita (fim)
         justify-content-center  = centraliza os itens 
-        justify-content-between = distribui os itens com espacos iguais entre eles
+        justify-content-between = distribui os itens com espaços iguais entre eles
         justify-content-around  = distribui os itens com espaços ao redor
         justify-content-evenly  = distribui os itens com espaco uniforme
     -->
