--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!--
-        as classes de alinhamento horizontal controlam como os itens são distribuidos ao longo do eixo principal 
+        As classes de alinhamento horizontal controlam como os itens são distribuidos ao longo do eixo principal 
 
         justify-content-start   = alinha os itens a esquerda (inicio)
         justify-content-end     = alinha os itens a direita (fim)
