cfb-bootstrap5 - alinhamento horizontal - display flex em bootstrap #p2

--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -17,6 +17,15 @@
         justify-content-between = distribui os itens com espaços iguais entre eles
         justify-content-around  = distribui os itens com espaços ao redor
         justify-content-evenly  = distribui os itens com espaco uniforme
+
+        Direção do eixo (flex diretction)
+
+        Para alterar o eixo principal
+
+        flex-row            = direcao horizontal
+        flex-row-reverse    = direcao horizontal invertida
+        flex-column         = direcao vertical
+        flex-column-reverse = direcao vertical
     -->
 
     <div class="p-1 d-flex flex-row m-2 justify-content-start" style="background-color: #cccc;">
