cfb-bootstrap5 - alinhamento horizontal - display flex em bootstrap #p2

--- a/cfb-bootstrap5/aula40/index.html
+++ b/cfb-bootstrap5/aula40/index.html
@@ -18,7 +18,7 @@
         justify-content-around  = distribui os itens com espaços ao redor
         justify-content-evenly  = distribui os itens com espaco uniforme
 
-        Direção do eixo (flex diretction)
+        Direção do eixo (flex direction)
 
         Para alterar o eixo principal
 
