cfb-bootstrap5 - align-content vs justify-content - display flex em bootstrap #p2

--- a/cfb-bootstrap5/aula41/index.html
+++ b/cfb-bootstrap5/aula41/index.html
@@ -16,6 +16,7 @@
         <div class="bg-danger border border-1 border-dark">cfb cursos</div>
         <div class="bg-secondary border border-1 border-dark">cfb cursos</div>
         <div class="bg-dark border border-1 border-dark">cfb cursos</div>
+        <div class="bg-ligth border border-1 border-dark">cfb cursos</div>
     </div>
 
 </body>
