--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <!--
+    
+        flex-column = disposição dos itens em uma coluna
+        flex-column-reverse = disposição dos ites em uma coluna mas em ordem reversa
+    -->
+
     <!-- display flex [d-flex] em bootstrap -->
     <div class="p-2 d-flex flex-column-reverse" style="background-color: #ddd;">
         <div class="bg-primary w-25">cfb cursos</div>
