cfb-bootstrap5 - adicionando descricao da classe e variacoes de flex-column

--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -9,8 +9,10 @@
 <body>
 
     <!--
+        A classe flex-column é usada para dispor os itens em uma coluna dentro de um container flexivel
+
     
-        flex-column = disposição dos itens em uma coluna
+        flex-column         = disposição dos itens em uma coluna
         flex-column-reverse = disposição dos ites em uma coluna mas em ordem reversa
     -->
 
