cfb-bootstrap5 - adicionando descricao da classe e variacoes de flex-column

--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -14,6 +14,12 @@
     
         flex-column         = disposição dos itens em uma coluna
         flex-column-reverse = disposição dos ites em uma coluna mas em ordem reversa
+
+        Classes utilitarias
+
+        align-itens-start   = alinha os itens no inicio do container
+        align-itens-center  = alinha os itens no centro do container
+        align-itens-end     = alinha os itens no final do container
     -->
 
     <!-- display flex [d-flex] em bootstrap -->
