cfb-bootstrap5 - adicionando descricao da classe e variacoes de flex-column

--- a/cfb-bootstrap5/aula39/index.html
+++ b/cfb-bootstrap5/aula39/index.html
@@ -17,9 +17,9 @@
 
         Classes utilitarias
 
-        align-itens-start   = alinha os itens no inicio do container
-        align-itens-center  = alinha os itens no centro do container
-        align-itens-end     = alinha os itens no final do container
+        align-items-start   = alinha os itens no inicio do container
+        align-items-center  = alinha os itens no centro do container
+        align-items-end     = alinha os itens no final do container
     -->
 
     <!-- display flex [d-flex] em bootstrap -->
