cfb-bootstrap5 - adicionando descricao da classe e variavoes de align-content

--- a/cfb-bootstrap5/aula41/index.html
+++ b/cfb-bootstrap5/aula41/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <!--
+
+        align-content-start     = alinha o conteudo no inicio do container
+        align-content-center    = alinha o conteudo no centro do container
+        aling-content-end       = alinha o conteudo no final do container
+    -->
+
     <div class="p-1 m-2 border border-1 border-dark" style="height: 300px;">
         <div class="bg-primary border border-1 border-dark">cfb cursos</div>
         <div class="bg-success border border-1 border-dark">cfb cursos</div>
