cfb-bootstrap5 - adicionando descricao da classe e variavoes de align-content

--- a/cfb-bootstrap5/aula41/index.html
+++ b/cfb-bootstrap5/aula41/index.html
@@ -13,6 +13,9 @@
         align-content-start     = alinha o conteudo no inicio do container
         align-content-center    = alinha o conteudo no centro do container
         aling-content-end       = alinha o conteudo no final do container
+        align-content-between   = distribui as linhas uniformemente com espacos entre elas
+        align-content-around    = distribui as linhas uniformemente com espacos ao redor
+        align-content-stretch   = estica as linhas uniformemente para preencher o espaco disponivel
     -->
 
     <div class="p-1 m-2 border border-1 border-dark" style="height: 300px;">
