cfb-bootstrap5 - adicionando descricao da classe e variavoes de align-content

--- a/cfb-bootstrap5/aula41/index.html
+++ b/cfb-bootstrap5/aula41/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <!--
+        A classe align-content é usada para alinhar o conteudo em um conteiner flexivel (flexbox), ela controla o alinhamento das linhas em um container
 
         align-content-start     = alinha o conteudo no inicio do container
         align-content-center    = alinha o conteudo no centro do container
