--- a/cfb-bootstrap5/aula39/exemplos.html
+++ b/cfb-bootstrap5/aula39/exemplos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="d-flex flex-wrap align-content-start" style="height: 200px;">
+    <div class="d-flex flex-column flex-wrap align-content-start" style="height: 200px;">
         <div class="p-2 border">item 1</div>
         <div class="p-2 border">item 2</div>
         <div class="p-2 border">item 3</div>
