--- a/cfb-bootstrap5/aula39/exemplos.html
+++ b/cfb-bootstrap5/aula39/exemplos.html
@@ -15,5 +15,12 @@
         <div class="p-2 border">item 4</div>
     </div>
 
+    <div class="d-flex flex-column flex-wrap align-content-center" style="height: 200px;">
+        <div class="p-2 border">item 1</div>
+        <div class="p-2 border">item 2</div>
+        <div class="p-2 border">item 3</div>
+        <div class="p-2 border">item 4</div>
+    </div>
+
 </body>
 </html>
