cfb-bootstrap5 - exemplo flexbox align-content-start

--- a/cfb-bootstrap5/aula39/exemplos.html
+++ b/cfb-bootstrap5/aula39/exemplos.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <!-- align-items-start   = alinha os itens no inicio do container -->
     <div class="d-flex flex-column flex-wrap align-content-start" style="height: 200px;">
         <div class="p-2 border">item 1</div>
         <div class="p-2 border">item 2</div>
