cfb-bootstrap5 - exemplo flexbox align-content-center

--- a/cfb-bootstrap5/aula39/exemplos.html
+++ b/cfb-bootstrap5/aula39/exemplos.html
@@ -16,6 +16,7 @@
         <div class="p-2 border">item 4</div>
     </div>
 
+    <!-- align-items-center  = alinha os itens no centro do container -->
     <div class="d-flex flex-column flex-wrap align-content-center" style="height: 200px;">
         <div class="p-2 border">item 1</div>
         <div class="p-2 border">item 2</div>
