--- a/cfb-bootstrap5/aula39/exemplos.html
+++ b/cfb-bootstrap5/aula39/exemplos.html
@@ -24,5 +24,13 @@
         <div class="p-2 border">item 4</div>
     </div>
 
+    <!-- align-content-around = alinha os itens com o mesmo espacamento entre eles -->
+    <div class="d-flex flex-column flex-wrap align-content-around" style="height: 200px;">
+        <div class="p-2 border">item 1</div>
+        <div class="p-2 border">item 2</div>
+        <div class="p-2 border">item 3</div>
+        <div class="p-2 border">item 4</div>
+    </div>
+
 </body>
 </html>
