cfb-bootstrap5 - exemplo flexbox align-content-end

--- a/cfb-bootstrap5/aula39/exemplos.html
+++ b/cfb-bootstrap5/aula39/exemplos.html
@@ -32,5 +32,12 @@
         <div class="p-2 border">item 4</div>
     </div>
 
+    <!-- align-items-end     = alinha os itens no final do container -->
+    <div class="d-flex flex-column flex-wrap align-content-end" style="height: 200px;">
+        <div class="p-2 border">item 1</div>
+        <div class="p-2 border">item 2</div>
+        <div class="p-2 border">item 3</div>
+        <div class="p-2 border">item 4</div>
+    </div>
 </body>
 </html>
