cfb-bootstrap5 - margens automaticas classe m-auto - display flex

--- a/cfb-bootstrap5/aula42/index.html
+++ b/cfb-bootstrap5/aula42/index.html
@@ -7,6 +7,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
 </head>
 <body>
+    
 
     <div class="p-1 m-2 border border-1 border-dark d-flex" style="height: 300px;">
         <div class="bg-primary border border-1 border-dark">cfb cursos</div>
@@ -16,6 +17,7 @@
         <div class="bg-danger border border-1 border-dark">cfb cursos</div>
         <div class="bg-secondary border border-1 border-dark">cfb cursos</div>
         <div class="bg-dark border border-1 border-dark">cfb cursos</div>
+        <div class="bg-ligth border border-1 border-dark">cfb cursos</div>
         <div class="bg-ligth border border-1 border-dark">cfb cursos</div>
     </div>
 
