cfb-bootstrap5 - margens automaticas classe m-auto - display flex - descricao

--- a/cfb-bootstrap5/aula42/index.html
+++ b/cfb-bootstrap5/aula42/index.html
@@ -7,6 +7,11 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
 </head>
 <body>
+
+    <!--
+        A classe m-auto no bootstrap é usadoa aplicar margens automaticas em todos os lados de um elemento. isso é util,
+        por exemplo para centraizar elementos horizontalmente ou verticalmente dentro de um container flex
+    -->
     
 
     <div class="p-1 m-2 border border-1 border-dark d-flex" style="height: 300px;">
