cfb-bootstrap5 - margens automaticas classe m-auto - display flex - descricao

--- a/cfb-bootstrap5/aula42/index.html
+++ b/cfb-bootstrap5/aula42/index.html
@@ -10,7 +10,9 @@
 
     <!--
         A classe m-auto no bootstrap é usadoa aplicar margens automaticas em todos os lados de um elemento. isso é util,
-        por exemplo para centraizar elementos horizontalmente ou verticalmente dentro de um container flex
+        por exemplo para centraizar elementos horizontalmente ou verticalmente dentro de um container flex.
+
+        m-auto: define margin: auto em todos os lados
     -->
     
 
