cfb-bootstrap5 - margens automaticas classe m-auto - display flex - descricao

--- a/cfb-bootstrap5/aula42/index.html
+++ b/cfb-bootstrap5/aula42/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!--
-        A classe m-auto no bootstrap é usadoa aplicar margens automaticas em todos os lados de um elemento. isso é util,
+        A classe m-auto no bootstrap é usada aplicar margens automaticas em todos os lados de um elemento. isso é util,
         por exemplo para centraizar elementos horizontalmente ou verticalmente dentro de um container flex.
 
         m-auto: define margin: auto em todos os lados (top, right, bottom, left)
