--- a/cfb-bootstrap5/aula42/index.html
+++ b/cfb-bootstrap5/aula42/index.html
@@ -29,5 +29,16 @@
         <div class="bg-ligth border border-1 border-dark my-auto mx-auto">cfb cursos</div>
     </div>
 
+    <div class="p-1 m-2 border border-1 border-dark d-flex" style="height: 300px;">
+        <div class="bg-primary border border-1 border-dark my-auto ms-auto">cfb cursos</div>
+        <div class="bg-success border border-1 border-dark my-auto">cfb cursos</div>
+        <div class="bg-info border border-1 border-dark my-auto">cfb cursos</div>
+        <div class="bg-warning border border-1 border-dark my-auto">cfb cursos</div>
+        <div class="bg-danger border border-1 border-dark ms-auto my-auto">cfb cursos</div>
+        <div class="bg-secondary border border-1 border-dark my-auto">cfb cursos</div>
+        <div class="bg-dark border border-1 border-dark my-auto">cfb cursos</div>
+        <div class="bg-ligth border border-1 border-dark my-auto me-auto">cfb cursos</div>
+    </div>
+
 </body>
 </html>
