cfb-bootstrap5 - exemplos de margem com bootstrap

--- a/cfb-bootstrap5/aula42/exemplos.html
+++ b/cfb-bootstrap5/aula42/exemplos.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+    <!--
+        As classes de margem são usadas para adicionar espacament ao redor dos elementos
+
+        m - aplica margem em todos os lados
+        mt - aplica margem no topo (top)
+        mb - aplica margem na parte inferior
+        ml - aplica margem a esquerda
+        mr - aplica margem a direita
+        mx - aplica margem horizontalmente
+        my - aplica margem verticalmente
+    -->
 
     <div class="m-3">margem para todos os lados</div>
     <div class="mt-2">margem no topo</div>
