cfb-bootstrap5 - exemplos de padding com bootstrap

--- a/cfb-bootstrap5/aula42/exemplos-padding.html
+++ b/cfb-bootstrap5/aula42/exemplos-padding.html
@@ -8,7 +8,17 @@
 </head>
 <body>
 
+    <!--
+        A classe p de padding no bootstrap e usada para adicionar espacamento interno aos elementos
 
+        p - aplica padding em todos os lados 
+        pt - aplica padding no topo
+        pb - aplica padding na parte inferior
+        pl - palica padding a esquerda]
+        pr - aplica padding a direita
+        px - plica padding horizontalmente 
+        py - aplica padding verticalmente
+    -->
 
     <div class="p-3">padding para todos os lados</div>
     <div class="pt-2">padding no topo</div>
