cfb-bootstrap5 - exemplos de padding com bootstrap (descricao)

--- a/cfb-bootstrap5/aula42/exemplos-padding.html
+++ b/cfb-bootstrap5/aula42/exemplos-padding.html
@@ -20,12 +20,25 @@
         py - aplica padding verticalmente
     -->
 
+    <!-- padding em todos os lado -->
     <div class="p-3">padding para todos os lados</div>
+
+    <!-- padding no topo -->
     <div class="pt-2">padding no topo</div>
+
+    <!-- padding na parte inferior -->
     <div class="pb-4">padding na parte inferior</div>
+
+    <!-- padding a esquerda -->
     <div class="pl-1">padding a esquerda</div>
+
+    <!-- padding a direita -->
     <div class="pr-5">padding a direita</div>
+
+    <!-- padding horizontal -->
     <div class="px-3">padding horizontal</div>
+
+    <!-- padding vertical -->
     <div class="py-0">sem padding vertical</div>
 
 </body>
