cfb-bootstrap5 - exemplos de padding com bootstrap

--- a/cfb-bootstrap5/aula42/exemplos-padding.html
+++ b/cfb-bootstrap5/aula42/exemplos-padding.html
@@ -21,25 +21,28 @@
     -->
 
     <!-- padding em todos os lado -->
-    <div class="p-3">padding para todos os lados</div>
+    <div class="p-3 bg-primary text-white">padding para todos os lados</div>
 
     <!-- padding no topo -->
-    <div class="pt-2">padding no topo</div>
+    <div class="pt-2 bg-secondary text-white mt-2">padding no topo</div>
 
     <!-- padding na parte inferior -->
-    <div class="pb-4">padding na parte inferior</div>
+    <div class="pb-4 bg-success text-white mt-2">padding na parte inferior</div>
 
     <!-- padding a esquerda -->
-    <div class="pl-1">padding a esquerda</div>
+    <div class="pl-1 bg-danger text-white mt-2">padding a esquerda</div>
 
     <!-- padding a direita -->
-    <div class="pr-5">padding a direita</div>
+    <div class="pr-5 bg-warning text-white mt-2">padding a direita</div>
 
     <!-- padding horizontal -->
-    <div class="px-3">padding horizontal</div>
+    <div class="px-3 bg-dark text-white mt-2">padding horizontal</div>
 
     <!-- padding vertical -->
-    <div class="py-0">sem padding vertical</div>
+    <div class="py-0 bg-dark text-white mt-2">sem padding vertical</div>
+
+    <!-- padding automatico -->
+    <div class="p-auto bg-light text-white mt-2">padding automatico</div>
 
 </body>
 </html>
