--- a/cfb-bootstrap5/aula43/index.html
+++ b/cfb-bootstrap5/aula43/index.html
@@ -7,6 +7,10 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
 </head>
 <body>
+
+    <!--
+        A classe align-self no bootstrap é usada para alinhar individualmente um item flex dentro dentro de um container flex
+    -->
     
 
     <div class="p-1 m-2 border border-1 border-dark d-flex" style="height: 300px;">
