cfb-bootstrap5 - auto alinhamento dos elementos, aling-self - flex

--- a/cfb-bootstrap5/aula43/index.html
+++ b/cfb-bootstrap5/aula43/index.html
@@ -14,14 +14,14 @@
     
 
     <div class="p-1 m-2 border border-1 border-dark d-flex" style="height: 300px;">
-        <div class="bg-primary border border-1 border-dark my-auto mx-auto">cfb cursos</div>
-        <div class="bg-success border border-1 border-dark my-auto mx-auto">cfb cursos</div>
-        <div class="bg-info border border-1 border-dark my-auto mx-auto">cfb cursos</div>
-        <div class="bg-warning border border-1 border-dark my-auto mx-auto">cfb cursos</div>
-        <div class="bg-danger border border-1 border-dark ms-auto my-auto mx-auto">cfb cursos</div>
-        <div class="bg-secondary border border-1 border-dark my-auto mx-auto">cfb cursos</div>
-        <div class="bg-dark border border-1 border-dark my-auto">cfb cursos</div>
-        <div class="bg-ligth border border-1 border-dark my-auto mx-auto">cfb cursos</div>
+        <div class="bg-primary border border-1 border-dark">cfb cursos</div>
+        <div class="bg-success border border-1 border-dark">cfb cursos</div>
+        <div class="bg-info border border-1 border-dark">cfb cursos</div>
+        <div class="bg-warning border border-1 border-dark">cfb cursos</div>
+        <div class="bg-danger border border-1 border-dark">cfb cursos</div>
+        <div class="bg-secondary border border-1 border-dark">cfb cursos</div>
+        <div class="bg-dark border border-1 border-dark">cfb cursos</div>
+        <div class="bg-ligth border border-1 border-dark">cfb cursos</div>
     </div>
 
 
