--- a/cfb-bootstrap5/aula43/index.html
+++ b/cfb-bootstrap5/aula43/index.html
@@ -10,6 +10,12 @@
 
     <!--
         A classe align-self no bootstrap é usada para alinhar individualmente um item flex dentro dentro de um container flex
+
+        align-self-start - alinha o item ao inicio do eixo cruzado
+        align-self-center - alinha o item ao centro do eixo cruzado
+        align-self-end - alinha o item ao final do eixo cruzado
+        align-selg-stretch - estica o item para o preencher o eixo cruzado
+        align-self-baseline - alinha o item a linha de base do texto
     -->
     
 
