cfb-bootstrap5 - auto alinhamento dos elementos, aling-self - flex - valores disponiveis

--- a/cfb-bootstrap5/aula43/index.html
+++ b/cfb-bootstrap5/aula43/index.html
@@ -14,7 +14,7 @@
         align-self-start - alinha o item ao inicio do eixo cruzado
         align-self-center - alinha o item ao centro do eixo cruzado
         align-self-end - alinha o item ao final do eixo cruzado
-        align-selg-stretch - estica o item para o preencher o eixo cruzado
+        align-self-stretch - estica o item para o preencher o eixo cruzado
         align-self-baseline - alinha o item a linha de base do texto
     -->
     
