--- a/cfb-bootstrap5/aula45/index.html
+++ b/cfb-bootstrap5/aula45/index.html
@@ -10,13 +10,18 @@
     
     <form class="p-3">
         <div class="my-3">
-            <label class="form-label">Nome:</label>
-            <input class="form-control" type="text" name="f_nome" >
+            <label class="form-label">Digite seu nome:</label>
+            <div class="input-group">
+                <span class="input-group-text">nome</span>
+                <input class="form-control" type="text" name="f_nome" >
+            </div>
         </div>
 
         <div class="my-3">
-            <label class="form-label">Email:</label>
-            <input class="form-control " type="email" name="f_email" >
+            <div class="form-floating mb-3 mt-3">
+                <input class="form-control " type="email" id="email" placeholder="digite o e-mail" name="f_email" >
+                <label class="form-label">Email:</label>
+            </div>
         </div>
 
         <div class="my-3">
@@ -38,6 +43,33 @@
             <div class="col my-3">
                 <label class="form-label">Nascimento:</label>
                 <input class="form-control" type="date" name="f_nascimento" >
+            </div>
+        </div>
+
+        <div class="my-3">
+            <label class="form-label">Transporte</label>
+            <select class="form-select" name="f_transporte">
+                <option>carro</option>
+                <option>motocicleta</option>
+                <option>aviao</option>
+                <option>trem</option>
+                <option>navio</option>
+            </select>
+        </div>
+
+        <div class="my-3">
+            <label class="form-label">Selecione o meio de deslocamento</label>
+            <div>
+                <input class="form-check-input" type="checkbox" name="chk_terrestre" value="terrestre" />
+                <label class="form-check-label">Terrestre</label>
+            </div>
+            <div>
+                <input class="form-check-input" type="checkbox" name="chk_aereo" value="aereo" />
+                <label class="form-check-label">Aereo</label>
+            </div>
+            <div>
+                <input class="form-check-input" type="checkbox" name="chk_maritmo" value="maritimo" />
+                <label class="form-check-label">Maritimo</label>
             </div>
         </div>
 
