--- a/cfb-bootstrap5/aula46/index.html
+++ b/cfb-bootstrap5/aula46/index.html
@@ -5,12 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet" >
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
+    <style>
+        .bg-azul-cinza {
+            background-color: #046;
+        }
+        .bg-cinza-claro {
+            background-color: #ddd;
+        }
+    </style>
 </head>
 <body>
     
     <header class="p-3 bg-primary text-white d-flex justify-content-start">
         <h3 class="m-auto align-self-center">Modelo de site bootstrap</h3>
     </header>
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-azul-cinza">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cursos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Arquivos</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 </body>
 </html>
