cfb-bootstrap5 - criando uma pagina completa em bootstrap #p2

--- a/cfb-bootstrap5/aula47/index.html
+++ b/cfb-bootstrap5/aula47/index.html
@@ -38,7 +38,24 @@
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col-sm-8"></div>
+            <div class="col-sm-8">
+                <div class="rounded p-2 mb-3 bg-cinza-claro">
+                    <h2>Titulo do conteudo</h2>
+                    <h5>Descrição do conteudo</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ad numquam aspernatur illo nulla autem facilis commodi quae aliquam, soluta reiciendis maxime corporis exercitationem, nam, harum voluptates sit doloremque amet.lore Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat vitae minima excepturi id iusto cupiditate fuga itaque amet explicabo qui, voluptatum, a sunt voluptatem, sapiente recusandae debitis adipisci voluptatibus architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit rem minima unde totam eum optio, quos error vitae doloremque officiis molestias recusandae voluptate praesentium possimus magni modi minus libero quod. </p>
+                </div>
+                <div class="rounded p-2 mb-3 bg-cinza-claro">
+                    <h2>Titulo do conteudo</h2>
+                    <h5>Descrição do conteudo</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ad numquam aspernatur illo nulla autem facilis commodi quae aliquam, soluta reiciendis maxime corporis exercitationem, nam, harum voluptates sit doloremque amet.lore Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat vitae minima excepturi id iusto cupiditate fuga itaque amet explicabo qui, voluptatum, a sunt voluptatem, sapiente recusandae debitis adipisci voluptatibus architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit rem minima unde totam eum optio, quos error vitae doloremque officiis molestias recusandae voluptate praesentium possimus magni modi minus libero quod. </p>
+                </div>
+                <div class="rounded p-2 mb-3 bg-cinza-claro">
+                    <h2>Titulo do conteudo</h2>
+                    <h5>Descrição do conteudo</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ad numquam aspernatur illo nulla autem facilis commodi quae aliquam, soluta reiciendis maxime corporis exercitationem, nam, harum voluptates sit doloremque amet.lore Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat vitae minima excepturi id iusto cupiditate fuga itaque amet explicabo qui, voluptatum, a sunt voluptatem, sapiente recusandae debitis adipisci voluptatibus architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit rem minima unde totam eum optio, quos error vitae doloremque officiis molestias recusandae voluptate praesentium possimus magni modi minus libero quod. </p>
+                </div>
+            </div>
+            <div class="col-sm-4"></div>
         </div>
     </div>
 
