--- a/cfb-bootstrap5/aula48/index.html
+++ b/cfb-bootstrap5/aula48/index.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <main class="container mt-5">
         <div class="row">
             <div class="col-sm-8">
                 <div class="rounded p-2 mb-3 bg-cinza-claro">
@@ -55,7 +55,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ad numquam aspernatur illo nulla autem facilis commodi quae aliquam, soluta reiciendis maxime corporis exercitationem, nam, harum voluptates sit doloremque amet.lore Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat vitae minima excepturi id iusto cupiditate fuga itaque amet explicabo qui, voluptatum, a sunt voluptatem, sapiente recusandae debitis adipisci voluptatibus architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit rem minima unde totam eum optio, quos error vitae doloremque officiis molestias recusandae voluptate praesentium possimus magni modi minus libero quod. </p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <aside class="col-sm-4">
                 <h2>Sobre</h2>
                 <h5>Sobre o cfb cursos</h5>
                 <p>Somos um canal do youtube voltado para cursos de programacao em geral</p>
@@ -65,39 +65,40 @@
                         <a class="nav-link active" href="#">C++</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Javascript</a>
+                        <a class="nav-link" href="#">Javascript</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Python</a>
+                        <a class="nav-link" href="#">Python</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">HTML</a>
+                        <a class="nav-link" href="#">HTML</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Css</a>
+                        <a class="nav-link" href="#">Css</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Bootstrap</a>
+                        <a class="nav-link" href="#">Bootstrap</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">React</a>
+                        <a class="nav-link" href="#">React</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">React-Native</a>
+                        <a class="nav-link" href="#">React-Native</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">PHP</a>
+                        <a class="nav-link" href="#">PHP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Arduino</a>
+                        <a class="nav-link" href="#">Arduino</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">E mais alguns outros....</a>
+                        <a class="nav-link" href="#">E mais alguns outros....</a>
                     </li>
                 </ul>
-            </div>
+            </aside>
         </div>
-    </div>
+    </main>
+    
 
 </body>
 </html>
