cfb-bootstrap5 - criando uma pagina completa em bootstrap #p3

--- a/cfb-bootstrap5/aula48/index.html
+++ b/cfb-bootstrap5/aula48/index.html
@@ -98,6 +98,10 @@
             </aside>
         </div>
     </main>
+
+    <footer class="mt-5 p-4 bg-dark text-white  text-center">
+        <p>cfb cursos</p>
+    </footer>
     
 
 </body>
