--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -6,7 +6,26 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" >
     <title>Quitanda Online</title>
   </head>
-  <body>
+  <body style="min-width: 372px;">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
+      <div class="container">
+        <a class="navbar-brand" href=""><strong>Quitanda Online</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse">
+          <ul class="navbar-nav flex-grow-1">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Principal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Politica de Privacidade</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
 
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
