--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -26,6 +26,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="align-self-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Quero Me cadastrar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Entrar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#cart3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
