--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -29,7 +29,7 @@
             <div class="align-self-end">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Quero Me cadastrar</a>
+                        <a class="nav-link text-white" href="#">Quero Me Cadastrar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Entrar</a>
