--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -46,6 +46,17 @@
         </div>
     </nav>
 
+    <header class="container">
+        <div id="carouselMain" class="carousel carousel-dark slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active text-center" data-interval="3000">
+                    <img src="/img/slides/slide01.jpg" alt="" class="img-fluid d-none d-md-block">
+                    <img src="/img/slides/slide01small.jpg" alt="" class="img-fluid d-block d-md-none">
+                </div>
+            </div>
+        </div>
+    </header>
+
     <footer class="border-top fixed-bottom text-muted bg-light">
         <div class="container">
             <div class="row py-3">
