--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -47,34 +47,34 @@
     </nav>
 
     <header class="container">
-        <div id="carouselMain" class="carousel carousel-dark slide" data-ride="carousel">
-            <ol class="carousel-indicators" >
-                <li data-target="#carouselMain" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselMain" data-slide-to="1" class="active"></li>
-                <li data-target="#carouselMain" data-slide-to="2" class="active"></li>
-            </ol>
+        <div id="carouselMain" class="carousel slide carousel-dark" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="2"></button>
+            </div>
             <div class="carousel-inner">
-                <div class="carousel-item active text-center" data-interval="3000">
-                    <img src="/img/slides/slide01.jpg" alt="" class="img-fluid d-none d-md-block">
-                    <img src="/img/slides/slide01small.jpg" alt="" class="img-fluid d-block d-md-none">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
                 </div>
-                <div class="carousel-item  text-center" data-interval="3000">
-                    <img src="/img/slides/slide01.jpg" alt="" class="img-fluid d-none d-md-block">
-                    <img src="/img/slides/slide01small.jpg" alt="" class="img-fluid d-block d-md-none">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
                 </div>
-                <div class="carousel-item  text-center" data-interval="3000">
-                    <img src="/img/slides/slide01.jpg" alt="" class="img-fluid d-none d-md-block">
-                    <img src="/img/slides/slide01small.jpg" alt="" class="img-fluid d-block d-md-none">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselMain" role="button" data-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
-                <span class="visually-hidden">Proximo</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselMain" role="button" data-slide="next">
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselMain" data-bs-slide="next">
                 <span class="carousel-control-next-icon"></span>
-                <span class="visually-hidden">Proximo</span>
-            </a>
+                <span class="visually-hidden">Próximo</span>
+            </button>
         </div>
     </header>
 
