--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -76,6 +76,7 @@
                 <span class="visually-hidden">Próximo</span>
             </button>
         </div>
+        <hr class="mt-3" />
     </header>
 
     <footer class="border-top fixed-bottom text-muted bg-light">
