--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Quitanda Online</title>
+    <title>Quitanda Online :: Página Principal</title>
 </head>
 
 <body style="min-width: 372px;">
