--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -79,6 +79,26 @@
         <hr class="mt-3" />
     </header>
 
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-5">
+                    <form>
+                        <div class="input-group input-group-sm">
+                            <input type="text" class="form-control" placeholder="digite aqui o que procura" />
+                            <button class="btn btn-danger">
+                                buscar
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-12 col-md-7">
+                    
+                </div>
+            </div>
+        </div>
+    </main>
+
     <footer class="border-top fixed-bottom text-muted bg-light">
         <div class="container">
             <div class="row py-3">
