projeto quitanda - area de busca de produtos

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -85,7 +85,7 @@
                 <div class="col-12 col-md-5">
                     <form>
                         <div class="input-group input-group-sm">
-                            <input type="text" class="form-control" placeholder="digite aqui o que procura" />
+                            <input type="text" class="form-control" placeholder="Digite aqui o que procura" />
                             <button class="btn btn-danger">
                                 buscar
                             </button>
