--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-5">
-                    <form>
+                    <form class="justify-content-center justify-content-md-start mb-3 mb-md-0">
                         <div class="input-group input-group-sm">
                             <input type="text" class="form-control" placeholder="Digite aqui o que procura" />
                             <button class="btn btn-danger">
