projeto quitanda - area de ordenacao de produtos

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -93,7 +93,15 @@
                     </form>
                 </div>
                 <div class="col-12 col-md-7">
-                    
+                    <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
+                        <form class="ml-3 d-inline-block">
+                            <select class="form-select form-select-sm">
+                                <option>Ordernar pelo nome</option>
+                                <option>Ordernar pelo menor preco</option>
+                                <option>Ordernar pelo maior preco</option>
+                            </select>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
