--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -101,6 +101,25 @@
                                 <option>Ordernar pelo maior preco</option>
                             </select>
                         </form>
+                        <nav class="d-inline-block">
+                            <ul class="pagination pagination-sm my-0">
+                                <li class="page-item">
+                                    <button class="page-link">1</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">2</button>
+                                </li>
+                                <li class="page-item dissabled">
+                                    <button class="page-link">3</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">4</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">5</button>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
