--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -123,6 +123,7 @@
                     </div>
                 </div>
             </div>
+            <hr class="mt-3" />
         </div>
     </main>
 
