projeto quitanda - inclui espacamento area de paginacao com area de ordenacao de produtos

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -94,14 +94,14 @@
                 </div>
                 <div class="col-12 col-md-7">
                     <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
-                        <form class="ml-3 d-inline-block">
+                        <form class="d-inline-block">
                             <select class="form-select form-select-sm">
                                 <option>Ordernar pelo nome</option>
                                 <option>Ordernar pelo menor preco</option>
                                 <option>Ordernar pelo maior preco</option>
                             </select>
                         </form>
-                        <nav class="d-inline-block">
+                        <nav class="d-inline-block me-3">
                             <ul class="pagination pagination-sm my-0">
                                 <li class="page-item">
                                     <button class="page-link">1</button>
