--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -124,6 +124,30 @@
                 </div>
             </div>
             <hr class="mt-3" />
+            <div class="row">
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <img src="" alt="">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
