projeto quitanda - area de listagem de produtos parte 1

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -134,7 +134,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
                             <p class="card-text">
-                                Banana prata da melhor qualidade possivel, direto do produtor para sua mesa
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
                         <div class="card-footer">
