--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -127,7 +127,12 @@
             <div class="row">
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <img src="" alt="">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000001.jpg" class="card-img-top">
                         <div class="card-header">
                             R$ 4,50
                         </div>
